--- a/CloudEnjoy/CloudEnjoy/Supporting_Files/Config/Info.plist
+++ b/CloudEnjoy/CloudEnjoy/Supporting_Files/Config/Info.plist
@@ -9,5 +9,10 @@
 	</dict>
 	<key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>location</string>
+	</array>
 </dict>
 </plist>
