删除对应的后台运行权限

--- a/CloudEnjoy/CloudEnjoy/Supporting_Files/Config/Info.plist
+++ b/CloudEnjoy/CloudEnjoy/Supporting_Files/Config/Info.plist
@@ -10,9 +10,6 @@
 	<key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
 	<true/>
 	<key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-		<string>location</string>
-	</array>
+	<array/>
 </dict>
 </plist>
