--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,11 @@ on:
 
 jobs:
   format-on-comment:
-    # 仅在第一次 Approved 且非作者本人时触发
+    # 仅在 PR 评论且评论内容为 /format 时触发
     if: |
-      github.event.review.state == 'approved' &&
-      github.event.review.user.login != github.event.pull_request.user.login
+      github.event.issue.pull_request &&
+      startsWith(github.event.comment.body, '/format') &&
+      github.event.comment.user.login != github.event.pull_request.user.login
     runs-on: macos-latest
     timeout-minutes: 15
 
