--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,12 @@ jobs:
       pull-requests: write # Required to post comments
 
     steps:
+      - name: Debug workspace
+        run: |
+          pwd
+          ls -la
+          find . -maxdepth 2 -name ".swiftformat"
+          
       - name: Get PR info
         id: pr
         env:
